--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,13 +5,14 @@
     <string name="title">Latitude Shortcut Creator</string>
     <string name="about">About</string>
 
-	<string name="Description">This application will create a Check In shortcut on your desktop to be used for directly invoking a Google Latitude Check In.</string>
-
+	<string name="Description">Create Google Latitude shortcuts on your home screen by choosing from the shortcuts below or choose All to create all shortcuts.
+		</string>
+		
 	<string name="CreateCheckInButtonText">Check In</string>
-	<string name="CreateListButtonText">Friends</string>
-	<string name="CreateHistoryButtonText">History</string>
-	<string name="CreatePlacesButtonText">Places</string>
-	<string name="CreateAllButtonText">All</string>
+	<string name="CreateListButtonText">Friends List</string>
+	<string name="CreateHistoryButtonText">Location History</string>
+	<string name="CreatePlacesButtonText">Manage Places</string>
+	<string name="CreateAllButtonText">All Shortcuts</string>
 
     <string name="OK">OK</string>
 
@@ -25,7 +26,7 @@
     <string name="TitleCheckin">Check In</string>
     <string name="LatitudeCheckinURI">latitude://latitude/checkin</string>
 
-    <string name="TitleList">Friends</string>
+    <string name="TitleList">Friends List</string>
     <string name="LatitudeListURI">latitude://latitude/list</string>
 
     <string name="TitleHistory">History</string>
